--- a/Multiple_sclerosis.ipynb
+++ b/Multiple_sclerosis.ipynb
@@ -1158,7 +1158,7 @@
     "feature_ranking_pca = pd.DataFrame({'Feature': numerical_features, 'Explained Variance Ratio': explained_variance_ratios})\n",
     "feature_ranking_pca = feature_ranking_pca.sort_values(by='Explained Variance Ratio', ascending=False)\n",
     "\n",
-    "print('PCA Feature Ranking \\n',feature_ranking_pca)\n"
+    "print('Feature Ranking by PCA\\n',feature_ranking_pca)\n"
    ]
   },
   {
